# preppipe-python

./: .env  .gitattributes  .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  README_dist.txt  README_en.md  build_assets.py  develop_bootstrap.sh  gitconfig  preppipe.spec  preppipe_cli.py  preppipe_gui_entry.py  pyproject.toml  setup.cfg  setup.py  versionfile_gen.py
.github/workflows/: autosync.yml  autotest.yml  autotest_e2e.yml  build_asset_zip.yml  build_full_package.yml  ci.yml  github-action.yml  githubpages.yml  printversion.py  publish.yml  publish_testpypi.yml  pyinstaller_build.yml  static.yml  steam.yml  test_ci_setup.yml
assets/: preppipe_asset_manifest.yml
assets/gui/: gui.yml
ci/: README_dist.txt  collect_licenses.py  mkdocsgen.py  preppipe.spec  preppipe_gui_entry.py  versionfile_gen.py
docs/: Doxyfile  Makefile
docs/scripts/: frontendcommanddocs.py
docs_doxygen/: Doxyfile
preppipe/: commontypes.py  documentmodel.py  vnmodel.py
preppipe/documentimport/: opendocument.py
preppipe/enginesupport/: renpy.py
preppipe/vnimport/: document.py
src/: test.docx
src/ScriptFlowEditor/: __init__.py  basicflow_deserialization_test.py  basicflow_serialization_test.py
src/fgui_converter/: FguiAssetsParseLib.py  __init__.py
src/preppipe/: __init__.py  appdir.py  commontypes.py  driver.py  exceptions.py  exportcache.py  imageexpr.py  inputmodel.py  irbase.py  irdataop.py  irjson.py  language.py  nameresolution.py  pipeline.py  pipeline_cmd.py  testbench.py  tooldecl.py  valueexpr.py  visualnovelmodel.py  vnmodel.py  vnmodel_v2.py  vnmodel_v3.py  vnmodel_v4.py
src/preppipe_gui/: executewindow.py  fileselection.py  framedecl.py  guiassets.py  languageupdate.py  main.py  settings.py
src/preppipe_gui_pyside6/: execution.py  main.py  mainwindow.py  mainwindowinterface.py  navigatorwidget.py  settingsdict.py  toolwidgetinterface.py  translatablewidgetinterface.py
tests/: renpy_pipeline_odf.odt  test_renpy_pipeline.py  test_util.py  test_vnfrontend.py  test_vnmodel.py  test_zh.py  util.py
(+259 files in other folders)
