[metadata]
name = preppipe
author = Shengjie Xu
author_email = xsj617603321@gmail.com
description = Document to Visual Novel generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PrepPipe/preppipe-python
project_urls =
  Bug Tracker = https://github.com/PrepPipe/preppipe-python/issues
license = Apache-2.0
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6

install_requires =
  bidict
  editdistance
  ghostscript
  pillow
  numpy
  pydub
  odfpy

[options.packages.find]
where = src
