[metadata]
name = preppipe
author = Shengjie Xu
author_email = xsj617603321@gmail.com
description = Document to Visual Novel generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PrepPipe/preppipe-python
project_urls =
  Bug Tracker = https://github.com/PrepPipe/preppipe-python/issues
license = Apache-2.0
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Development Status :: 1 - Planning

[options]
include_package_data = True
package_dir =
  = src
packages = find_namespace:
python_requires = >=3.10

install_requires =
  llist
  odfpy
  python-docx
  chardet
  marko
  pyyaml
  pillow
  pydub
  numpy
  scipy
  matplotlib
  opencv-python
  ghostscript
  editdistance
  bidict
  pypinyin
  graphviz
  antlr4-python3-runtime >= 4.10, < 4.11.0

# GUI extra dependencies here
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#configuring-setup-using-setup-cfg-files
[options.extras_require]
gui =
  tkinterdnd2

[options.packages.find]
where = src

[options.entry_points]
pyinstaller40 =
  hook-dirs = preppipe.__pyinstaller:get_hook_dirs
